force-app/main/default/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>Allowed_Editors_Full__c</fullName>
        <formula>IF(
   INCLUDES(Allowed_Editors__c , &quot;Nanjing&quot;),
   &quot;The British School of Nanjing;&quot;,
   null 
   ) &amp; 
IF( 
   INCLUDES(Allowed_Editors__c, &quot;Marbella&quot;),
   &quot;The British School of Marbella;&quot;,
   null 
   ) &amp; 
IF(
   INCLUDES(Allowed_Editors__c, &quot;Navarra&quot;), 
   &quot;The British School of Navarra;&quot;,
   null
   ) &amp; 
IF(
   INCLUDES(Allowed_Editors__c, &quot;Tashkent&quot;), 
   &quot;The British School of Tashkent;&quot;,
   null 
   ) &amp; 
IF(
   INCLUDES(Allowed_Editors__c, &quot;São Paulo&quot;),
   &quot;The British College of Brazil;&quot;,
   null
   ) &amp; 
IF( 
   INCLUDES(Allowed_Editors__c , &quot;Kuala Lumpur&quot;),
   &quot;The British International School of Kuala Lumpur;&quot;,
   null 
   ) &amp; 
IF(
   INCLUDES(Allowed_Editors__c , &quot;Moscow&quot;),
   &quot;The International School of Moscow;&quot;,
   null
   ) &amp; 
IF( 
   INCLUDES(Allowed_Editors__c , &quot;Manila&quot;),
   &quot;The King&apos;s School Manila;&quot;,
   null
   ) &amp;
IF( 
   INCLUDES(Allowed_Editors__c , &quot;Yangon&quot;), 
   &quot;The British School Yangon;&quot;,
   null
   ) &amp;  
IF(
   INCLUDES(Allowed_Editors__c , &quot;New York&quot;),
   &quot;The New York International School;&quot;,
   null 
   ) &amp; 
IF( 
   INCLUDES(Allowed_Editors__c, &quot;Brasilia&quot;), 
   &quot;The British School of Brasilia;&quot;,
   null
   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Allowed Editors Full</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Allowed_Editors__c</fullName>
        <description>Works in conjunction with a validation rule to only allow certain users the ability to edit certain fees e.g. monthly fees for Brazil in which they change the title of the fee every month</description>
        <inlineHelpText>Select the school who&apos;s users can edit the name of this fee</inlineHelpText>
        <label>Allowed Editors</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Kuala Lumpur</fullName>
                </value>
                <value>
                    <fullName>Yangon</fullName>
                </value>
                <value>
                    <fullName>Nanjing</fullName>
                </value>
                <value>
                    <fullName>Manila</fullName>
                </value>
                <value>
                    <fullName>Moscow</fullName>
                </value>
                <value>
                    <fullName>Tashkent</fullName>
                </value>
                <value>
                    <fullName>Marbella</fullName>
                </value>
                <value>
                    <fullName>Navarra</fullName>
                </value>
                <value>
                    <fullName>New York</fullName>
                </value>
                <value>
                    <fullName>Brasilia</fullName>
                </value>
                <value>
                    <fullName>São Paulo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description_of_fee__c</fullName>
        <label>Description of fee</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Tuition</fullName>
                </value>
                <value>
                    <fullName>Lunch</fullName>
                </value>
                <value>
                    <fullName>Bus</fullName>
                </value>
                <value>
                    <fullName>Enrolment</fullName>
                </value>
                <value>
                    <fullName>Application</fullName>
                </value>
                <value>
                    <fullName>EAL</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Doesn_t_Meet_Validation__c</fullName>
        <formula>AND( 
OR( 
TEXT(Description_of_fee__c) = &quot;Tuition&quot;, 
TEXT(Description_of_fee__c) = &quot;Lunch&quot;, 
TEXT(Description_of_fee__c) = &quot;Bus&quot;, 
TEXT(Description_of_fee__c) = &quot;EAL&quot; 
), 
NOT(CONTAINS(Name, &quot;Yearly&quot;)),  
NOT(CONTAINS(Name, &quot;Termly&quot;)),  
NOT(CONTAINS(Name, &quot;Monthly&quot;)) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Doesn&apos;t Meet Validation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_ID_18_Char__c</fullName>
        <description>The ID of the record in the alternate SFDC org, where applicable.</description>
        <externalId>true</externalId>
        <label>External ID (18 Char)</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fee_Frequency__c</fullName>
        <label>Fee Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Yearly</fullName>
                </value>
                <value>
                    <fullName>Termly</fullName>
                </value>
                <value>
                    <fullName>One Off</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fee_Season__c</fullName>
        <label>Fee Season</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Fee_Frequency__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Half_Day__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Half Day</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invoice_Currency__c</fullName>
        <label>Invoice Currency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>EUR</fullName>
                    <default>true</default>
                    <label>EUR</label>
                </value>
                <value>
                    <fullName>BRL</fullName>
                </value>
                <value>
                    <fullName>CNY</fullName>
                </value>
                <value>
                    <fullName>GBP</fullName>
                </value>
                <value>
                    <fullName>MMK</fullName>
                </value>
                <value>
                    <fullName>MYR</fullName>
                </value>
                <value>
                    <fullName>PHP</fullName>
                </value>
                <value>
                    <fullName>RUB</fullName>
                </value>
                <value>
                    <fullName>USD</fullName>
                </value>
                <value>
                    <fullName>UZS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Year_Group__c</fullName>
        <label>Year Group</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Description_of_fee__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>PN1</fullName>
                </value>
                <value>
                    <fullName>PN</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
                <value>
                    <fullName>R</fullName>
                </value>
                <value>
                    <fullName>Y1</fullName>
                </value>
                <value>
                    <fullName>Y2</fullName>
                </value>
                <value>
                    <fullName>Y3</fullName>
                </value>
                <value>
                    <fullName>Y4</fullName>
                </value>
                <value>
                    <fullName>Y5</fullName>
                </value>
                <value>
                    <fullName>Y6</fullName>
                </value>
                <value>
                    <fullName>Y7</fullName>
                </value>
                <value>
                    <fullName>Y8</fullName>
                </value>
                <value>
                    <fullName>Y9</fullName>
                </value>
                <value>
                    <fullName>Y10</fullName>
                </value>
                <value>
                    <fullName>Y11</fullName>
                </value>
                <value>
                    <fullName>Y12</fullName>
                </value>
                <value>
                    <fullName>Y13</fullName>
                </value>
                <value>
                    <fullName>PK</fullName>
                </value>
                <value>
                    <fullName>K</fullName>
                </value>
                <value>
                    <fullName>G1</fullName>
                </value>
                <value>
                    <fullName>G2</fullName>
                </value>
                <value>
                    <fullName>G3</fullName>
                </value>
                <value>
                    <fullName>G4</fullName>
                </value>
                <value>
                    <fullName>G5</fullName>
                </value>
                <value>
                    <fullName>G6</fullName>
                </value>
                <value>
                    <fullName>G7</fullName>
                </value>
                <value>
                    <fullName>G8</fullName>
                </value>
                <value>
                    <fullName>G9</fullName>
                </value>
                <value>
                    <fullName>G10</fullName>
                </value>
                <value>
                    <fullName>G11</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllProducts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Products</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Ensure_Correct_Fields_are_Populated</fullName>
        <active>true</active>
        <errorConditionFormula>OR(TEXT(Description_of_fee__c) = &quot;&quot;, TEXT(Fee_Frequency__c) = &quot;&quot;, TEXT(Invoice_Currency__c) = &quot;&quot;)</errorConditionFormula>
        <errorMessage>You must enter a &apos;Description of fee&apos;, a &apos;Fee Frequency&apos; and an &apos;Invoice Currency&apos; for all fees.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Ensure_Product_Name_Contains_Frequency</fullName>
        <active>true</active>
        <description>Ensures that the product name includes the invoice frequency for use in the auditing formulas</description>
        <errorConditionFormula>AND(
    OR(
       TEXT(Description_of_fee__c) = &quot;Tuition&quot;,  
       TEXT(Description_of_fee__c) = &quot;Lunch&quot;,  
       TEXT(Description_of_fee__c) = &quot;Bus&quot;, 
       TEXT(Description_of_fee__c) = &quot;EAL&quot;
       ), 
    NOT(CONTAINS(Name, &quot;Yearly&quot;)), 
    NOT(CONTAINS(Name, &quot;Termly&quot;)),
    NOT(CONTAINS(Name, &quot;Monthly&quot;))
    )</errorConditionFormula>
        <errorMessage>If a fee is of type &apos;Tuition&apos;, &apos;Lunch&apos;, &apos;Bus&apos; or &apos;EAL&apos; its name must contain &apos;Termly&apos;, &apos;Monthly&apos; or &apos;Yearly&apos; (Case Sensitive)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prevent_Users_Editing_Common_Fees</fullName>
        <active>true</active>
        <errorConditionFormula>OR(
   AND(
       $User.Can_Edit_Fees__c = FALSE,
       OR(
          ISCHANGED(Fee_Frequency__c),
          ISCHANGED(Half_Day__c),
          ISCHANGED(Invoice_Currency__c),
          ISCHANGED(Description_of_fee__c),
          ISCHANGED(Year_Group__c),
          ISCHANGED(Fee_Season__c),
          ISCHANGED(Family),
          ISCHANGED(ProductCode)
          )
       ),
   AND(
       $User.Can_Edit_Fees__c = FALSE,
       ISCHANGED(Name),
       OR(
          NOT(CONTAINS(Allowed_Editors_Full__c, TEXT($User.School__c))),
          Allowed_Editors_Full__c = null 
          )
       )
   )</errorConditionFormula>
        <errorMessage>You do not have permission to edit this fee. Please contact the Group Head of Finance for further assistance.</errorMessage>
    </validationRules>
</CustomObject>